header info handler + code deduplication